force-app/main/default/objects/Transaction_Vacation__b/fields/Complaint_Code__c.field-meta.xml
<CustomField>
        <fullName>Complaint_Code__c</fullName>
        <label>Complaint Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>