force-app/main/default/objects/Transaction_Vacation__b/fields/Donation_Type__c.field-meta.xml
<CustomField>
        <fullName>Donation_Type__c</fullName>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>