force-app/main/default/objects/Transaction_Vacation__b/fields/Expire_Date__c.field-meta.xml
<CustomField>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>DateTime</type>
    </CustomField>