force-app/main/default/objects/Transaction_Vacation__b/fields/Offer_Source__c.field-meta.xml
<CustomField>
        <fullName>Offer_Source__c</fullName>
        <label>Offer Source</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>