force-app/main/default/objects/Transaction_Vacation__b/fields/Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </CustomField>