force-app/main/default/objects/Transaction_Vacation__b/fields/Stop_Source__c.field-meta.xml
<CustomField>
        <fullName>Stop_Source__c</fullName>
        <label>Stop Source</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>