force-app/main/default/objects/Transaction_Vacation__b/fields/Subscription__c.field-meta.xml
<CustomField>
        <fullName>Subscription__c</fullName>
        <description>Subscription this vacation is related to.</description>
        <label>Subscription</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>