force-app/main/default/objects/Transaction_Vacation__b/fields/SubscriptionId__c.field-meta.xml
<CustomField>
        <fullName>SubscriptionId__c</fullName>
        <description>Id of the subscription in SFDC this record is related to</description>
        <label>SubscriptionId</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>