force-app/main/default/objects/Transaction_Vacation__b/fields/Termination_Code__c.field-meta.xml
<CustomField>
        <fullName>Termination_Code__c</fullName>
        <label>Termination Code</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>