force-app/main/default/objects/Transaction_Vacation__b/fields/Trans_Number__c.field-meta.xml
<CustomField>
        <fullName>Trans_Number__c</fullName>
        <label>Trans Number</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>