force-app/main/default/objects/Transaction_Vacation__b/fields/Type_Name__c.field-meta.xml
<CustomField>
        <fullName>Type_Name__c</fullName>
        <description>Descriptive name for the code.</description>
        <label>Type Name</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>